--- a/public/chat.html
+++ b/public/chat.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Chat App</title>
+    <title>JChat</title>
     <link rel="icon" href="/img/favicon.png">
     <link rel="stylesheet" href="/css/styles.min.css">
 </head>
